Cleaned up build.gradle Added run config for client